--- a/week5/main.css
+++ b/week5/main.css
@@ -10,7 +10,7 @@ body {
 .header {
   width: 100%;
   height: 250px;
-  background-color: rgb(18, 121, 111);
+  background-color: pink;
 }
 
 .menu {
@@ -26,7 +26,7 @@ body {
 .button {
   width: 120px;
   height: 100%;
-  background-color: rgb(203, 164, 130);
+  background-color:orange;
   margin: 2px;
 }
 
