--- a/week5/main.css
+++ b/week5/main.css
@@ -17,6 +17,7 @@ body {
   width: 100%;
   height: 50px;
   background-color: rgb(199, 134, 78);
+  font: Verdana;
 
   display: flex;
   justify-content: center; /* horizontal */
@@ -64,7 +65,7 @@ body {
 
 .footer {
   width: 100%;
-  height: 70px;
+  height: 100px;
   background-color: blue;
 }
 
